@@ -48,7 +48,7 @@ public class King extends Piece
 	
 	public ArrayList<Move> getThreats()
 	{
-		return moves();
+		return getMoves();
 	}
 	
 	public Piece clone()
