@@ -24,7 +24,7 @@ public class Queen extends Piece
 	
 	public ArrayList<Move> getThreats()
 	{
-		return moves();
+		return getMoves();
 	}
 	
 	public Piece clone()
